validacoes e tratamento erros globais

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- validação -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+
 		<!-- Criptografia -->
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
