--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>3.0.4</version> <!-- Verifique a versão mais recente -->
 		</dependency>
+		
+		<!-- BCrypt -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 	</dependencies>
 
